{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 56,
  "lineage": "ddf244f2-73d3-6abe-fd4e-9c6ccc024aba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "adamsackfield-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862686223907:internet-gateway/igw-079a9fa124f47c269",
            "id": "igw-079a9fa124f47c269",
            "owner_id": "862686223907",
            "tags": {
              "Name": "adamsackfield-ig"
            },
            "tags_all": {
              "Name": "adamsackfield-ig"
            },
            "vpc_id": "vpc-04effec3f793cb068"
          },
          "dependencies": [
            "aws_vpc.adamsackfield-application-deployment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "adamsackfield-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862686223907:route-table/rtb-0b48cd7e792939275",
            "id": "rtb-0b48cd7e792939275",
            "owner_id": "862686223907",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079a9fa124f47c269",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04effec3f793cb068"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.adamsackfield-ig",
            "aws_vpc.adamsackfield-application-deployment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "adamsackfield-application-deployment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862686223907:vpc/vpc-04effec3f793cb068",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.8.0.0/16",
            "default_network_acl_id": "acl-0364e253845f8bb31",
            "default_route_table_id": "rtb-020a630d1a6140ec0",
            "default_security_group_id": "sg-0abe5fce9a9684d6a",
            "dhcp_options_id": "dopt-0298130dad1770616",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04effec3f793cb068",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020a630d1a6140ec0",
            "owner_id": "862686223907",
            "tags": {
              "Name": "adamsackfield-application-deployment-vpc"
            },
            "tags_all": {
              "Name": "adamsackfield-application-deployment-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aadcd8576538f786",
            "arn": "arn:aws:ec2:us-east-1:862686223907:instance/i-0f31160912de5e1f8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f31160912de5e1f8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "adamsackfield-latest-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09517b406ebe1b386",
            "private_dns": "ip-10-8-0-138.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.8.0.138",
            "public_ip": "3.237.71.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cdcb74cdbdbf43ad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042d3a54432179842",
            "tags": {
              "Name": "adamsackfield-app"
            },
            "tags_all": {
              "Name": "adamsackfield-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fdfc9ae2e19c149c"
            ]
          },
          "dependencies": [
            "aws_vpc.adamsackfield-application-deployment",
            "module.application-tier.aws_security_group.adamsackfield-sg-group",
            "module.application-tier.aws_subnet.adamsackfield-app-subnet",
            "module.db-tier.aws_instance.db",
            "module.db-tier.aws_security_group.adamsackfield-sg-db-group",
            "module.db-tier.aws_subnet.adamsackfield-db-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "adamsackfield-app-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0518836bb786dbf06",
            "route_table_id": "rtb-0b48cd7e792939275",
            "subnet_id": "subnet-042d3a54432179842"
          },
          "dependencies": [
            "aws_internet_gateway.adamsackfield-ig",
            "aws_route_table.adamsackfield-rt",
            "aws_vpc.adamsackfield-application-deployment",
            "module.application-tier.aws_subnet.adamsackfield-app-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "adamsackfield-sg-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862686223907:security-group/sg-0fdfc9ae2e19c149c",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdfc9ae2e19c149c",
            "ingress": [],
            "name": "adamsackfield-app-sg",
            "name_prefix": "",
            "owner_id": "862686223907",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "adamsackfield-app-sg"
            },
            "tags_all": {
              "Name": "adamsackfield-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04effec3f793cb068"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.adamsackfield-application-deployment"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2590955335",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fdfc9ae2e19c149c",
            "security_group_rule_id": "sgr-04ef15371a0c24113",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.adamsackfield-application-deployment",
            "module.application-tier.aws_security_group.adamsackfield-sg-group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "51.14.230.62/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-764928231",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fdfc9ae2e19c149c",
            "security_group_rule_id": "sgr-030db3d7685281dff",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.adamsackfield-application-deployment",
            "module.application-tier.aws_security_group.adamsackfield-sg-group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "54.197.131.165/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1615935501",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fdfc9ae2e19c149c",
            "security_group_rule_id": "sgr-08b7ada97c982e079",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.adamsackfield-application-deployment",
            "module.application-tier.aws_security_group.adamsackfield-sg-group"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "adamsackfield-app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862686223907:subnet/subnet-042d3a54432179842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.8.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042d3a54432179842",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862686223907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "adamsackfield-app"
            },
            "tags_all": {
              "Name": "adamsackfield-app"
            },
            "vpc_id": "vpc-04effec3f793cb068"
          },
          "dependencies": [
            "aws_vpc.adamsackfield-application-deployment"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a6bcbc3dec6aeb5a",
            "arn": "arn:aws:ec2:us-east-1:862686223907:instance/i-02c4350bd6822f591",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02c4350bd6822f591",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e29e6d65e5640f22",
            "private_dns": "ip-10-8-1-227.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.8.1.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b8a24a87fcaefc4d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06dfdae62c9676f13",
            "tags": {
              "Name": "adamsackfield-database"
            },
            "tags_all": {
              "Name": "adamsackfield-database"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-072c7eade45e24369"
            ]
          },
          "dependencies": [
            "aws_vpc.adamsackfield-application-deployment",
            "module.db-tier.aws_security_group.adamsackfield-sg-db-group",
            "module.db-tier.aws_subnet.adamsackfield-db-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "adamsackfield-db-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074692ab897f44818",
            "route_table_id": "rtb-020a630d1a6140ec0",
            "subnet_id": "subnet-06dfdae62c9676f13"
          },
          "dependencies": [
            "aws_vpc.adamsackfield-application-deployment",
            "module.db-tier.aws_subnet.adamsackfield-db-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "adamsackfield-sg-db-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862686223907:security-group/sg-072c7eade45e24369",
            "description": "Allow all invound traffric",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-072c7eade45e24369",
            "ingress": [],
            "name": "adamsackfield-database-db-sg",
            "name_prefix": "",
            "owner_id": "862686223907",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "adamsackfield-database-sg"
            },
            "tags_all": {
              "Name": "adamsackfield-database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04effec3f793cb068"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.adamsackfield-application-deployment"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.8.0.0/24"
            ],
            "description": null,
            "from_port": 27017,
            "id": "sgrule-841213593",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-072c7eade45e24369",
            "security_group_rule_id": "sgr-04ea476e82b0d3c4a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.adamsackfield-application-deployment",
            "module.db-tier.aws_security_group.adamsackfield-sg-db-group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "51.14.230.62/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2414188495",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-072c7eade45e24369",
            "security_group_rule_id": "sgr-0da986abda9b164b4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.adamsackfield-application-deployment",
            "module.db-tier.aws_security_group.adamsackfield-sg-db-group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "54.197.131.165/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-4084060234",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-072c7eade45e24369",
            "security_group_rule_id": "sgr-03c68b31d57129f42",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.adamsackfield-application-deployment",
            "module.db-tier.aws_security_group.adamsackfield-sg-db-group"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "adamsackfield-db-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862686223907:subnet/subnet-06dfdae62c9676f13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.8.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dfdae62c9676f13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862686223907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "adamsackfield-database-db-subnet"
            },
            "tags_all": {
              "Name": "adamsackfield-database-db-subnet"
            },
            "vpc_id": "vpc-04effec3f793cb068"
          },
          "dependencies": [
            "aws_vpc.adamsackfield-application-deployment"
          ]
        }
      ]
    }
  ]
}